# golden-compass

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloud-run.yml
.streamlit/: config.toml
app/: __init__.py  main.py
golden_compass/: __init__.py  config.py
golden_compass/analytics/: __init__.py  indicators.py
golden_compass/data/: loader.py  sources.py
golden_compass/services/: __init__.py  fred.py  twelve_data.py
scripts/: bootstrap_data.py
tests/: __init__.py  test_imports.py
