[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-compass"
version = "0.1.0"
description = "Golden Compass - gold investment monitoring dashboard"
requires-python = ">=3.10"
authors = [
  {name = "Golden Compass Team"}
]
readme = "README.md"
license = {text = "Proprietary"}
keywords = ["gold", "dashboard", "streamlit", "macro"]
dependencies = [
  "streamlit>=1.38",
  "pandas>=2.2",
  "requests>=2.32",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "plotly>=5.22"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools.packages.find]
where = ["."]
